# penGUIn

./: .gitignore  CMakeLists.txt
resources/: cone.nff  cube.nff  cylinder.nff  ground.frag  ground.geom  ground.vert  sphere.nff  texture.frag  texture.vert  walking1.txt
src/: AnimatedCharacter.cpp  AnimatedCharacter.h  App.cpp  App.h  BaseApp.cpp  BaseApp.h  Body.cpp  Body.h  Bone.cpp  Bone.h  Box.cpp  Box.h  Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  ExampleApp.cpp  ExampleApp.h  Eye.cpp  Eye.h  Foot.cpp  Foot.h  GLSLProgram.cpp  GLSLProgram.h  Head.cpp  Head.h  Inreader.cpp  Inreader.h  Line.cpp  Line.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RotationBounds.cpp  RotationBounds.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  (+5 more)
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
